# OKRidge

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/okridge/: __init__.py  node.py  solvers.py  tree.py  utils.py
tests/: test_okridge.py
