[tool.poetry]
name = "okridge"
version = "0.1.0"
description = "A packge for solving k-sparse ridge regression certifiably!"
authors = ["Jiachang Liu"]
license = "BSD 3-Clause"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
