[tool.poetry]
name = "okridge"
version = "0.1.1"
description = "A packge for solving k-sparse ridge regression certifiably!"
authors = ["Jiachang Liu"]
license = "BSD 3-Clause"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9,<3.13"
numpy = "^1.26.1"
scikit-learn = "^1.3.2"
scipy = "^1.11.3"
psutil = "^5.9.6"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
jupyter = "^1.0.0"
pytest-cov = "^4.1.0"
myst-nb = {version = "^1.0.0", python = "^3.9"}
sphinx-autoapi = "^3.0.0"
sphinx-rtd-theme = "^2.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
